public/less/bevy/BevySettingsModal.less
.bevy-settings-modal {
  .modal-dialog {
    width: 300px;
    .modal-content {
      .modal-header {
        padding: 0px;
        .modal-title {

        }
        .close {
          padding-left: 0px;
        }
      }
      .modal-body {
        padding: 0px;
        display: flex;
        flex-direction: column;
        .bevy-setting {
          margin-top: 20px;
        }
        .expire-setting {
          font-size: 14px;
          font-weight: 600;
          display: flex;
          align-items: center;
          justify-content: space-between;
          .mui-drop-down-menu {
            vertical-align: middle;
            font-weight: 100;
            margin-left: 33px;
            z-index: 10;
          }
        }
      }
      
      .modal-footer {
        border: none;
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
        padding: 15px 0;
        
      }
    }
  }
}

